--- a/src/main/resources/templates/quiz/quiz_category.html
+++ b/src/main/resources/templates/quiz/quiz_category.html
@@ -46,34 +46,41 @@
 <!--      style="width: 90%; height: 80%; margin-top: 6%;"-->
         <div class="content-in-challenge">
             <h6 th:text="${challenge}" style="font-size: 1.5em;">Category</h6>
-            <ul th:each="quiz : ${quizzes}">
-                <li class="list-item">Challenge: <a th:text="${quiz.quizName}" th:href="@{/admin_quiz/edit(uuid=${quiz.quizId})}"></a></li>
-                <li class="list-item">Writer: <span th:text="${quiz.quizWriter}"></span></li>
-                <li class="list-item">Category: <span th:text="${quiz.category}"></span></li>
-                <li class="list-item" th:if="${quiz.level == 0}">Level: Low</li>
-                <li class="list-item" th:if="${quiz.level == 1}">Level: Middle</li>
-                <li class="list-item" th:if="${quiz.level == 2}">Level: High</li>
+            <table>
+                <thead>
+                <tr class="text-white">
+                    <th scope="col">Challenge</th>
+                    <th scope="col">Writer</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Level</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                <tr th:each="quiz : ${quizzes}" th:id="${'row' + quiz.quizId}" onclick="showPopup(this.id)">
+                    <td th:text="${quiz.quizName}" ></td>
+                    <td th:text="${quiz.quizWriter}"></td>
+                    <td th:text="${quiz.category}"></td>
+                    <td th:if="${quiz.level == 0}">Low</td>
+                    <td th:if="${quiz.level == 1}">Middle</td>
+                    <td th:if="${quiz.level == 2}">High</td>
+                </tr>
+                </tbody>
+            </table>
+
         <!-- Dimmed background -->
         <div id="dimmed-bg" style="display: none; position: fixed;  width:100%; height:100%; top:0; left:0; background-color:black; opacity:0.7;" ></div>
 
         <!-- Popup window -->
         <div id="popup" style="display:none;width:auto;height:auto;top:50%;left:50%;transform:translate(-50%, -50%);background-color:white;position:fixed;" >
-            <h6 class="mb-4 chbox">Quiz Create Page</h6>
+            <h5 th:text="${quizzes.listIterator()}">Challenge Name</h5>
             <div class="form-floating mb-3 chbox">
-                <input type="email" class="form-control" id="floatingInput"
-                       placeholder="name@example.com">
-                <label for="floatingInput">Quiz Name</label>
+                <div th:text="${quiz.quizWriter}"></div>
             </div>
-            <div class="form-floating mb-3 chbox">
-                <select class="form-select" id="floatingSelect"
-                        aria-label="Floating label select example">
-                    <option value="REVERSING">REVERSING</option>
-                    <option value="PWN">PWN</option>
-                    <option value="WEB">WEB</option>
-                    <option value="FORENSICS">FORENSICS</option>
-                    <option value="MISC">MISC</option>
-                </select>
-                <label for="floatingSelect">Category Select</label>
+            <div class="form-floating mb-3 chbox" >
+                <td th:if="${quiz.level == 0}">Low</td>
+                <td th:if="${quiz.level == 1}">Middle</td>
+                <td th:if="${quiz.level == 2}">High</td>
             </div>
 
             <div class="form-floating">
