--- a/src/main/resources/templates/mypage/profile.html
+++ b/src/main/resources/templates/mypage/profile.html
@@ -29,13 +29,13 @@
                         <div class="d-flex align-items-start" style="height: 100%;">
                             <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist"
                                  aria-orientation="vertical">
-                                <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
+                                <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" onclick="location.href='/myPage/profile'"
                                         data-bs-target="#v-pills-home" type="button" role="tab"
-                                        aria-controls="v-pills-home" aria-selected="true">Profile
+                                        aria-controls="v-pills-home" >Profile
                                 </button>
-                                <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
+                                <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" onclick="location.href='/myPage/solved'"
                                         data-bs-target="#v-pills-profile" type="button" role="tab"
-                                        aria-controls="v-pills-profile" aria-selected="false">Solved
+                                        aria-controls="v-pills-profile" >Solved
                                 </button>
                             </div>
                             <div style="width: 100%; height: 100%;">
