--- a/src/main/resources/templates/mypage/solved.html
+++ b/src/main/resources/templates/mypage/solved.html
@@ -1,10 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>Register</title>
+
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/css/common.css}" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script th:src="@{/js/info/editUser.js}"></script>
 </head>
 <body>
-
+<div class="layout-nav">
+    <nav th:replace="~{/nav :: nav}"></nav>
+</div>
+<div class="layout-content-no-footer">
+    <div class="content-login container-fluid position-relative d-flex p-0">
+        <div class="container-fluid">
+            <div class="row h-100 align-items-center justify-content-center" style="max-height: 867px;">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4" style="width: 80%; height: 90%;">
+                    <div class="bg-secondary rounded p-4 p-sm-5" style="height: 100%; min-height: 632px;" >
+                        <div class="d-flex align-items-start" style="height: 100%;">
+                            <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist"
+                                 aria-orientation="vertical">
+                                <button class="nav-link" id="v-pills-home-tab" data-bs-toggle="pill" onclick="location.href='/myPage/profile'"
+                                        data-bs-target="#v-pills-home" type="button" role="tab"
+                                        aria-controls="v-pills-home" >Profile
+                                </button>
+                                <button class="nav-link active" id="v-pills-profile-tab" data-bs-toggle="pill" onclick="location.href='/myPage/solved'"
+                                        data-bs-target="#v-pills-profile" type="button" role="tab"
+                                        aria-controls="v-pills-profile" >Solved
+                                </button>
+                            </div>
+                            <div style="width: 100%; height: 100%;">
+                                <div class="mb-1" style="height: 100px;">
+                                    <span style="color: white; font-weight: bold;">REVERSING</span>
+                                    <input style="background: black;" type="text" class="mt-2 form-control h-50" id="REVERSING" readonly>
+                                </div>
+                                <div class="mb-1" style="height: 100px;">
+                                    <span style="color: white; font-weight: bold;">PWN</span>
+                                    <input style="background: black;" type="text" class="mt-2 form-control h-50" id="PWN" readonly>
+                                </div>
+                                <div class="mb-1" style="height: 100px;">
+                                    <span style="color: white; font-weight: bold;">WEB</span>
+                                    <input style="background: black;" type="text" class="mt-2 form-control h-50" id="WEB" readonly>
+                                </div>
+                                <div class="mb-1" style="height: 100px;">
+                                    <span style="color: white; font-weight: bold;">FORENSICS</span>
+                                    <input style="background: black;" type="text" class="mt-2 form-control h-50" id="FORENSICS" readonly>
+                                </div>
+                                <div class="mb-1" style="height: 100px;">
+                                    <span style="color: white; font-weight: bold;">MISC</span>
+                                    <input style="background: black;" type="text" class="mt-2 form-control h-50" id="MISC" readonly>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Sign In End -->
+    </div>
+</div>
 </body>
 </html>
+<script th:inline="javascript">
+    var reversingArray = /*[[${reversing}]]*/ [];
+    var pwnArray = /*[[${pwn}]]*/ [];
+    var webArray = /*[[${web}]]*/ [];
+    var forensicsArray = /*[[${forensics}]]*/ [];
+    var miscArray = /*[[${misc}]]*/ [];
+
+    for(let i = 0; i<reversingArray.length; i++){
+        if(i === reversingArray.length-1){
+            document.getElementById("REVERSING").value += (reversingArray[i]);
+        } else {
+            document.getElementById("REVERSING").value += (reversingArray[i] + ", ");
+        }
+
+    }
+    for(let i = 0; i<pwnArray.length; i++){
+        if(i === pwnArray.length -1){
+            document.getElementById("PWN").value += (pwnArray[i]);
+        } else {
+            document.getElementById("PWN").value += (pwnArray[i] + ", ");
+        }
+
+    }
+    for(let i = 0; i<webArray.length; i++){
+        if(i === webArray.length -1){
+            document.getElementById("WEB").value += (webArray[i]);
+        } else {
+            document.getElementById("WEB").value += (webArray[i] + ", ");
+        }
+
+    }
+    for(let i = 0; i<forensicsArray.length; i++){
+        if(i === forensicsArray.length -1){
+            document.getElementById("FORENSICS").value += (forensicsArray[i]);
+        } else {
+            document.getElementById("FORENSICS").value += (forensicsArray[i] + ", ");
+        }
+
+    }
+    for(let i = 0; i<miscArray.length; i++){
+        if(i=== miscArray.length -1){
+            document.getElementById("MISC").value += (miscArray[i]);
+        } else {
+            document.getElementById("MISC").value += (miscArray[i] + ", ");
+        }
+
+    }
+
+
+</script>
